# peac

./: .dependency-cruiser.json  .eslintignore  .eslintrc.cjs  .eslintrc.json  .gitattributes  .gitignore  .gitmessage  .prettierignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMPLIANCE.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  GOVERNANCE.md  IMPLEMENTATION_STATUS.md  LICENSE  MIGRATION-v0.9.14.md  Makefile  NOTICE  PR-2-Core-Implementation-Report.md  QUICK_START_REFERENCE.md  README.md  REFACTOR_VALIDATION.md  RELEASE.md  RELEASE_NOTES.md  RELEASING.md  REPOSITORY_ARCHITECTURE.md  REPO_SURFACE_STATUS.json  ROADMAP.md  SECURITY.md  SUPPORT.md  TRADEMARKS.md  USECASES.md  e2e-peac-test.js  eslint.config.mjs  flowchart.md  jest.config.js  llms.txt  (+21 more)
.changeset/: capture-core-async-dedupe.md  config.json  release-v0-9-12-1.md
.githooks/: commit-msg  pre-commit  pre-push
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  SECURITY.md  SUPPORT.md  dependabot.yml  pull_request_template.md
.husky/: pre-push
.well-known/: peac.schema.json
api/: dashboard.js  negotiation.js  server.js
apps/: ENV.md
archive/: README.md
archive/wasm-exploration-v0.9.15/wasm/: Cargo.toml
archive/wasm-exploration-v0.9.15/wasm/src/: lib.rs
archived/: package-lock.json  sign_message.py
cli/: README.md  example-receipt.json  example-tempo-receipt.json  peac-cli.js  peac.js  peac.py  requirements.txt
core/: attribution.js  checkAccess.js  fetchPricing.js  index.js  middleware.js  parseDuration.js  signer.js  tiers.js
coverage/: clover.xml  coverage-final.json  (+1 more)
(+1852 files in other folders)
