[package]
name = "peac-wasm"
version = "0.9.15"
edition = "2021"
authors = ["PEAC Protocol Contributors"]
description = "WASM modules for deterministic PEAC core operations"
license = "Apache-2.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-bulk-memory"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
base64 = "0.22"
ed25519-dalek = { version = "2.1", features = ["serde"] }
url = "2.5"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = "z"         # Optimize for size
lto = true              # Link-time optimization
codegen-units = 1       # Better optimization
strip = true            # Strip symbols
panic = "abort"         # Smaller binary

[profile.release.package."*"]
opt-level = "z"
